fix: Improve the spacing at the top of quarto-content in the styles.css file.

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ h2,
 
 h1.title,
 .title.h1 {
-  margin-top: 0rem;
+  margin-top: -1rem;
 }
 
 h2,
@@ -244,6 +244,27 @@ audio {
 
 /* Navbar {{{ */
 
+#quarto-content>* {
+  padding-top: 12px;
+}
+
+@media (max-width: 991.98px) {
+  #quarto-content>* {
+    padding-top: 12px !important;
+  }
+}
+
+.navbar-toggler-icon {
+  display: inline-block;
+  width: 1.5em;
+  height: 1.882em;
+  vertical-align: middle;
+  background-image: var(--bs-navbar-toggler-icon-bg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+}
+
 .navbar a {
   text-decoration: none;
   font-size: 1rem;
@@ -299,6 +320,12 @@ audio {
 /* }}} */
 
 /* Sidebar {{{ */
+
+.sidebar.toc-left,
+.sidebar.margin-sidebar {
+  top: 0px;
+  padding-top: 1em !important;
+}
 
 .sidebar nav[role="doc-toc"] ul>li>a.active,
 .sidebar nav[role="doc-toc"] ul>li>ul>li>a.active {
